update swagger and Pagination for the controller.
